--- a/themes/product.html
+++ b/themes/product.html
@@ -1,73 +1,93 @@
 <meta charset="UTF-8">
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="js/main.js"></script>
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/main.css">
 
-<div id="app">
-    <div class="bg-primary">
-        <div class="container">
-            <nav class="navbar navbar-expand navbar-dark bg-primary p-0">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Sản phẩm</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Liên hệ</a>
-                    </li>
-                </ul>
-                
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="cart.html">Giỏ hàng : 0 ₫</a>
-                    </li>        
-                </ul>
-            </nav>
-        </div>
-    </div>
 
-    <div class='container'>
-        <div class="row">
-            <div class="col-6">
-                <image class='product-detail-image' src="images/ASUS_0008.jpg">            
-            </div>
-            
-            <div class="col-6 mt-5">
-                <div class='product-detail-title'>Asus TP412FA-EC121T</div>
-                <br>
-                <table class="table">
-                    <tr>
-                        <td>Hãng sản xuất:</td>
-                        <td>Asus</td>
-                    </tr>
-                    <tr>
-                        <td>Loại CPU:</td>
-                        <td>i3 8145u</td>
-                    </tr>
-                    <tr>
-                        <td>Kích thước RAM:</td>
-                        <td>4GB</td>
-                    </tr>
-                    <tr>
-                        <td>Kích thước ổ cứng:</td>
-                        <td>256GB (SSD)</td>
-                    </tr>
-                    <tr>
-                        <td>Kích thước màn hình:</td>
-                        <td>14.0 inch</td>
-                    </tr>
-                    <tr>
-                        <td>Khối lượng:</td>
-                        <td>1.8 kg</td>
-                    </tr>
-                    <tr>
-                        <td>Giá bán:</td>
-                        <td><b>13.599.000 ₫</b></td>
-                    </tr>
-                </table>
-                <br>
-                <a class="btn btn-secondary" href="index.html">Quay lại</a>    
-                <a class="btn btn-primary" href="purchase.html">Thêm vào giỏ hàng</a>
-            </div>
-        </div>    
+<div id="app">
+  <div class="bg-primary">
+    <div class="container">
+      <nav class="navbar navbar-expand navbar-dark bg-primary p-0">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Sản phẩm</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Liên hệ</a>
+          </li>
+        </ul>
+
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="cart.html">Giỏ hàng : 0 ₫</a>
+          </li>
+        </ul>
+      </nav>
     </div>
+  </div>
+
+  <div class='container'>
+    <div class="row">
+      <div class="col-6">
+        <image class='product-detail-image' src="images/ASUS_0008.jpg">
+      </div>
+
+      <div class="col-6 mt-5">
+        <div class='product-detail-title'>Asus TP412FA-EC121T</div>
+        <br>
+        <table class="table">
+          <tr>
+            <td>Hãng sản xuất:</td>
+            <td>Asus</td>
+          </tr>
+          <tr>
+            <td>Loại CPU:</td>
+            <td>i3 8145u</td>
+          </tr>
+          <tr>
+            <td>Kích thước RAM:</td>
+            <td>4GB</td>
+          </tr>
+          <tr>
+            <td>Kích thước ổ cứng:</td>
+            <td>256GB (SSD)</td>
+          </tr>
+          <tr>
+            <td>Kích thước màn hình:</td>
+            <td>14.0 inch</td>
+          </tr>
+          <tr>
+            <td>Khối lượng:</td>
+            <td>1.8 kg</td>
+          </tr>
+          <tr>
+            <td>Giá bán:</td>
+            <td><b>13.599.000 ₫</b></td>
+          </tr>
+        </table>
+        <br>
+        <a class="btn btn-secondary" href="index.html">Quay lại</a>
+        <a class="btn btn-primary" href="purchase.html">Thêm vào giỏ hàng</a>
+      </div>
+    </div>
+  </div>
 </div>
+
+<script>
+  new Vue({
+    el: '#app',
+    data: {
+      product: {}
+    },
+    created: async function() {
+      var currentURL = location.href;
+      var token = '?id=';
+      var pos = currentURL.lastIndexOf(token);
+      if(pos >= 0) {
+        var id = currentURL.substring(pos + token.length);
+        alert('id:' + id);
+      }
+    }
+  })
+</script>
