--- a/themes/product.html
+++ b/themes/product.html
@@ -38,7 +38,7 @@
         <br>
         <table class="table">
           <tr>
-            <td>Nhóm sản phẩm:</td>
+            <td>Nhóm sản phẩm: {{ product.categoryName }}</td>
             <td></td>
           </tr>          
           <tr>
