--- a/themes/product.html
+++ b/themes/product.html
@@ -48,7 +48,7 @@
         </table>
         <br>
         <a class="btn btn-secondary" href="index.html">Quay lại</a>
-        <a class="btn btn-primary" href="purchase.html">Thêm vào giỏ hàng</a>
+        <a class="btn btn-primary" :href="`cart.html?id=${product.id}`">Thêm vào giỏ hàng</a>
       </div>
     </div>
   </div>
