--- a/themes/cart.html
+++ b/themes/cart.html
@@ -1,62 +1,84 @@
 <meta charset="UTF-8">
-<script src="js/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="js/main.js"></script>
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/main.css">
 
 <div id="app">
-    <div class="bg-primary">
-        <div class="container">
-            <nav class="navbar navbar-expand navbar-dark bg-primary p-0">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Sản phẩm</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Liên hệ</a>
-                    </li>
-                </ul>
-                
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="cart.html">Giỏ hàng : 13.590.000 ₫</a>
-                    </li>        
-                </ul>
-            </nav>
-        </div>
-    </div>
-
+  <div class="bg-primary">
     <div class="container">
-        <div class="mt-3">
-            <h4>Thông tin giỏ hàng</h4>
-        </div>
+      <nav class="navbar navbar-expand navbar-dark bg-primary p-0">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Sản phẩm</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Liên hệ</a>
+          </li>
+        </ul>
 
-        <table class='table'>
-            <tr>
-                <th>Tên sản phẩm</th>
-                <th>Đơn giá</th>
-                <th style="width: 25%">Số lượng</th>
-                <th>Tổng</th>
-                <th></th>
-            </tr>    
-            <tr>
-                <td>Asus TP412FA-EC121T</td>
-                <td>13.590.000 ₫</td>
-                <td>
-                    <input type="number" class="form-control" min="1" value="1">
-                </td>
-                <td>13.590.000 ₫</td>
-                <td><a href="#">Xóa</a></td>
-            </tr>    
-        </table>
-
-        <div class="row">
-            <div class='col-3 offset-9'>
-                <h5>Tổng : 13.590.000 ₫</h5>
-            </div>
-        </div>
-
-        <a class="btn btn-primary" href="#">Thanh toán</a>
-        <a class="btn btn-secondary" href="index.html">Tiếp tục mua hàng</a>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="cart.html">Giỏ hàng : 13.590.000 ₫</a>
+          </li>
+        </ul>
+      </nav>
     </div>
+  </div>
+
+  <div class="container">
+    <div class="mt-3">
+      <h4>Thông tin giỏ hàng</h4>
+    </div>
+
+    <table class='table'>
+      <tr>
+        <th>Tên sản phẩm</th>
+        <th>Đơn giá</th>
+        <th style="width: 25%">Số lượng</th>
+        <th>Tổng</th>
+        <th></th>
+      </tr>
+      <tr>
+        <td>Asus TP412FA-EC121T</td>
+        <td>13.590.000 ₫</td>
+        <td>
+          <input type="number" class="form-control" min="1" value="1">
+        </td>
+        <td>13.590.000 ₫</td>
+        <td><a href="#">Xóa</a></td>
+      </tr>
+    </table>
+
+    <div class="row">
+      <div class='col-3 offset-9'>
+        <h5>Tổng : 13.590.000 ₫</h5>
+      </div>
+    </div>
+
+    <a class="btn btn-primary" href="#">Thanh toán</a>
+    <a class="btn btn-secondary" href="index.html">Tiếp tục mua hàng</a>
+  </div>
 </div>
+
+<script>
+  new Vue({
+    el: '#app',
+    data: {
+      items: [],
+      baseURL: 'http://localhost:8000/api',
+    },
+    created: async function() {
+      this.items = localStorage.getItem('items') || [];
+
+      var currentURL = location.href;
+      var token = '?id=';
+      var pos = currentURL.lastIndexOf(token);
+      if(pos >= 0) {
+        var id = currentURL.substring(pos + token.length);
+        var result = await this.get('/product_detail/' + id);
+        alert(result.product.name);    
+      }
+    }
+  })
+</script>
