--- a/themes/cart.html
+++ b/themes/cart.html
@@ -87,7 +87,7 @@
           }
         }
       }
-      localStorage.set('items', this.items);
+      localStorage.setItem('items', this.items);
       console.log(this.items);
     }
   })
