--- a/themes/cart.html
+++ b/themes/cart.html
@@ -39,13 +39,13 @@
         <th>Tổng</th>
         <th></th>
       </tr>
-      <tr>
-        <td>Asus TP412FA-EC121T</td>
-        <td>13.590.000 ₫</td>
+      <tr v-for='item in items'>
+        <td>{{item.product.name}}</td>
+        <td>{{item.product.price}} ₫</td>
         <td>
-          <input type="number" class="form-control" min="1" value="1">
+          <input v-model="item.qty" type="number" class="form-control" min="1" value="1">
         </td>
-        <td>13.590.000 ₫</td>
+        <td>{{item.qty*item.product.price}} ₫</td>
         <td><a href="#">Xóa</a></td>
       </tr>
     </table>
@@ -89,7 +89,7 @@
         }
       }
       localStorage.setItem('itemList', JSON.stringify(this.items));
-      console.log(this.items);
+
     }
   })
 </script>
