--- a/themes/cart.html
+++ b/themes/cart.html
@@ -19,7 +19,7 @@
 
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="cart.html">Giỏ hàng : 13.590.000 ₫</a>
+            <a class="nav-link" href="cart.html">Giỏ hàng : {{total}} ₫</a>
           </li>
         </ul>
       </nav>
@@ -39,14 +39,14 @@
         <th>Tổng</th>
         <th></th>
       </tr>
-      <tr v-for='item in items'>
+      <tr v-for='(item,index) in items'>
         <td>{{item.product.name}}</td>
         <td>{{item.product.price}} ₫</td>
         <td>
           <input v-model="item.qty" type="number" class="form-control" min="1" value="1">
         </td>
         <td>{{item.qty*item.product.price}} ₫</td>
-        <td><a href="#">Xóa</a></td>
+        <td><a href="#" v-on:click="deleteProduct(index)">Xóa</a></td>
       </tr>
     </table>
 
@@ -56,7 +56,7 @@
       </div>
     </div>
 
-    <a class="btn btn-primary" href="#">Thanh toán</a>
+    <a class="btn btn-primary" href="purchase.html">Thanh toán</a>
     <a class="btn btn-secondary" href="index.html">Tiếp tục mua hàng</a>
   </div>
 </div>
@@ -68,12 +68,23 @@
       items: [],
       baseURL: 'http://localhost:8000/api',
     },
+    methods: {
+      deleteProduct: function(index) {
+        this.items.splice(index, 1);
+        localStorage.setItem('itemList', JSON.stringify(this.items));
+      }
+    },
     computed : {
       total() {
         var s = 0;
         for(var i = 0; i < this.items.length;i++)
           s += this.items[i].qty * this.items[i].product.price;
         return s;
+      }
+    },
+    watch: {
+      total: function(val) {
+        localStorage.setItem('total', val);
       }
     },
     created: async function() {
